# roampal

./: .env.example  .gitignore  AI_LIMITATIONS_DISCLAIMER.txt  BUILD.md  CONTRIBUTING.md  CULTURAL_ADAPTATION_DISCLAIMER.txt  CULTURAL_ADAPTATION_SYSTEM.md  LICENSE  PRIVACY_POLICY.txt  README.md  README.txt  TERMS_OF_SERVICE.txt  THIRD_PARTY_LICENSES.md  UNKNOWN_CULTURAL_PATTERNS.md  USER_RIGHTS_AND_CONTROLS.txt  main.py  quick-start.sh  requirements.txt
docs/: CLAUDE.md  (+6 more)
ui-implementation/src-tauri/: Cargo.toml  LICENSE.txt  README.txt  TROUBLESHOOT.bat  tauri.conf.json
ui-implementation/src-tauri/backend/: main.py  requirements.txt
ui-implementation/src-tauri/backend/app/: cors_handler.py  dependencies_initializers.py
ui-implementation/src-tauri/backend/backend/: .env.example  book_upload_api.py  websocket_progress.py
ui-implementation/src-tauri/backend/config/: __init__.py  default_config.yaml  feature_flag_validator.py  feature_flags.json  feature_flags.py  model_contexts.py  model_limits.py  model_mode_matrix.py  settings.py
ui-implementation/src-tauri/backend/middleware/: __init__.py  auth.py  auth_middleware.py
ui-implementation/src-tauri/backend/models/: validation.py
ui-implementation/src-tauri/backend/prompts/: blend_inputs.txt  debate_prompt.txt  extract_content.txt  fragment_replay.txt  merge_cluster.txt  profile_update_detection.txt
ui-implementation/src-tauri/backend/services/: enhanced_web_search_service.py  response_enhancer.py  session_manager.py  (+1 more)
ui-implementation/src-tauri/icons/: icon.icns
ui-implementation/src-tauri/src/: main.rs
(+985 files in other folders)
